--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -10,52 +10,90 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:columnCount="3"
+        android:rowCount="3">
 
-        <ImageView android:layout_row="0"
+        <ImageView android:id="@+id/box1"
+            android:layout_row="0"
             android:layout_column="0"
+            android:layout_gravity="fill"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_rowWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
-        <ImageView android:layout_row="0"
+        <ImageView android:id="@+id/box2"
+            android:layout_row="0"
             android:layout_column="1"
+            android:layout_gravity="fill"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_rowWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
-        <ImageView android:layout_row="0"
+        <ImageView android:id="@+id/box3"
+            android:layout_row="0"
             android:layout_column="2"
+            android:layout_gravity="fill"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_rowWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
-        <ImageView android:layout_row="1"
+        <ImageView android:id="@+id/box4"
+            android:layout_row="1"
             android:layout_column="0"
+            android:layout_gravity="fill"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_rowWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
-        <ImageView android:layout_row="1"
+        <ImageView android:id="@+id/box5"
+            android:layout_row="1"
             android:layout_column="1"
+            android:layout_gravity="fill"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_rowWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
-        <ImageView android:layout_row="1"
+        <ImageView android:id="@+id/box6"
+            android:layout_row="1"
             android:layout_column="2"
+            android:layout_gravity="fill"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_rowWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
-        <ImageView android:layout_row="2"
+        <ImageView android:id="@+id/box7"
+            android:layout_row="2"
             android:layout_column="0"
+            android:layout_gravity="fill"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_rowWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
-        <ImageView android:layout_row="2"
+        <ImageView android:id="@+id/box8"
+            android:layout_row="2"
             android:layout_column="1"
+            android:layout_gravity="fill"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_rowWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
-        <ImageView android:layout_row="2"
+        <ImageView android:id="@+id/box9"
+            android:layout_row="2"
             android:layout_column="2"
+            android:layout_gravity="fill"
             android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_rowWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
     </GridLayout>
 
