--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -14,86 +14,113 @@
         android:columnCount="3"
         android:rowCount="3">
 
-        <ImageView android:id="@+id/box1"
+        <ImageButton android:id="@+id/box1"
             android:layout_row="0"
             android:layout_column="0"
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"/>
 
-        <ImageView android:id="@+id/box2"
+        <ImageButton android:id="@+id/box2"
             android:layout_row="0"
             android:layout_column="1"
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"/>
 
-        <ImageView android:id="@+id/box3"
+        <ImageButton android:id="@+id/box3"
             android:layout_row="0"
             android:layout_column="2"
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"/>
 
-        <ImageView android:id="@+id/box4"
+        <ImageButton android:id="@+id/box4"
             android:layout_row="1"
             android:layout_column="0"
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"/>
 
-        <ImageView android:id="@+id/box5"
+        <ImageButton android:id="@+id/box5"
             android:layout_row="1"
             android:layout_column="1"
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"/>
 
-        <ImageView android:id="@+id/box6"
+        <ImageButton android:id="@+id/box6"
             android:layout_row="1"
             android:layout_column="2"
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"/>
 
-        <ImageView android:id="@+id/box7"
+        <ImageButton android:id="@+id/box7"
             android:layout_row="2"
             android:layout_column="0"
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"/>
 
-        <ImageView android:id="@+id/box8"
+        <ImageButton android:id="@+id/box8"
             android:layout_row="2"
             android:layout_column="1"
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"/>
 
-        <ImageView android:id="@+id/box9"
+        <ImageButton android:id="@+id/box9"
             android:layout_row="2"
             android:layout_column="2"
             android:layout_gravity="fill"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:padding="5dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"/>
 
     </GridLayout>
 
