--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/backgroundColor"
     tools:context=".activities.MenuActivity">
 
     <RelativeLayout
@@ -20,6 +21,7 @@
             android:layout_centerHorizontal="true"
             android:text="@string/app_name"
             android:textAlignment="center"
+            android:textColor="?attr/textColor"
             android:textSize="48sp" />
 
         <TextView
@@ -30,6 +32,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:textAlignment="center"
+            android:textColor="?attr/textColor"
             android:text="@string/subname" />
 
         <Button
@@ -84,6 +87,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             android:textAlignment="center"
+            android:textColor="?attr/textColor"
             android:text="@string/bottom" />
 
     </RelativeLayout>
