--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-
     <color name="white">#FFF</color>
+    <color name="black">#000</color>
+    <color name="darkBackground">#222</color>
     <color name="lightActive">#0078FF</color>
     <color name="darkActive">#D9534F</color>
 </resources>
