Dark mode is working

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,6 +2,7 @@
 <resources>
     <declare-styleable name="Theme">
         <attr name="backgroundColor" format="color"/>
+        <attr name="foregroundColor" format="color"/>
         <attr name="textColor" format="color"/>
         <attr name="activeColor" format="color"/>
     </declare-styleable>
