--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -25,7 +25,8 @@
             android:layout_height="0dp"
             android:padding="5dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:backgroundTint="?attr/foregroundColor"/>
 
         <ImageButton android:id="@+id/box2"
             android:layout_row="0"
@@ -37,7 +38,8 @@
             android:layout_height="0dp"
             android:padding="5dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:backgroundTint="?attr/foregroundColor"/>
 
         <ImageButton android:id="@+id/box3"
             android:layout_row="0"
@@ -49,7 +51,8 @@
             android:layout_height="0dp"
             android:padding="5dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:backgroundTint="?attr/foregroundColor"/>
 
         <ImageButton android:id="@+id/box4"
             android:layout_row="1"
@@ -61,7 +64,8 @@
             android:layout_height="0dp"
             android:padding="5dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:backgroundTint="?attr/foregroundColor"/>
 
         <ImageButton android:id="@+id/box5"
             android:layout_row="1"
@@ -73,7 +77,8 @@
             android:layout_height="0dp"
             android:padding="5dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:backgroundTint="?attr/foregroundColor"/>
 
         <ImageButton android:id="@+id/box6"
             android:layout_row="1"
@@ -85,7 +90,8 @@
             android:layout_height="0dp"
             android:padding="5dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:backgroundTint="?attr/foregroundColor"/>
 
         <ImageButton android:id="@+id/box7"
             android:layout_row="2"
@@ -97,7 +103,8 @@
             android:layout_height="0dp"
             android:padding="5dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:backgroundTint="?attr/foregroundColor"/>
 
         <ImageButton android:id="@+id/box8"
             android:layout_row="2"
@@ -109,7 +116,8 @@
             android:layout_height="0dp"
             android:padding="5dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:backgroundTint="?attr/foregroundColor"/>
 
         <ImageButton android:id="@+id/box9"
             android:layout_row="2"
@@ -121,7 +129,8 @@
             android:layout_height="0dp"
             android:padding="5dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:backgroundTint="?attr/foregroundColor"/>
 
     </GridLayout>
 
