--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <style name="AppThemeLight" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="backgroundColor">@color/white</item>
+        <item name="foregroundColor">@color/lightForeground</item>
         <item name="textColor">@color/black</item>
         <item name="activeColor">@color/lightActive</item>
     </style>
@@ -11,6 +12,7 @@
     <style name="AppThemeDark" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="backgroundColor">@color/darkBackground</item>
+        <item name="foregroundColor">@color/darkForeground</item>
         <item name="textColor">@color/white</item>
         <item name="activeColor">@color/darkActive</item>
     </style>
