--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,154 +7,167 @@
     android:background="?attr/backgroundColor"
     tools:context=".activities.GameActivity">
 
-    <GridLayout android:id="@+id/grid"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:columnCount="3"
-        android:rowCount="3">
-
-        <ImageButton android:id="@+id/box1"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:padding="5dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:backgroundTint="?attr/foregroundColor"/>
-
-        <ImageButton android:id="@+id/box2"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:padding="5dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:backgroundTint="?attr/foregroundColor"/>
-
-        <ImageButton android:id="@+id/box3"
-            android:layout_row="0"
-            android:layout_column="2"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:padding="5dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:backgroundTint="?attr/foregroundColor"/>
-
-        <ImageButton android:id="@+id/box4"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:padding="5dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:backgroundTint="?attr/foregroundColor"/>
-
-        <ImageButton android:id="@+id/box5"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:padding="5dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:backgroundTint="?attr/foregroundColor"/>
-
-        <ImageButton android:id="@+id/box6"
-            android:layout_row="1"
-            android:layout_column="2"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:padding="5dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:backgroundTint="?attr/foregroundColor"/>
-
-        <ImageButton android:id="@+id/box7"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:padding="5dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:backgroundTint="?attr/foregroundColor"/>
-
-        <ImageButton android:id="@+id/box8"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:padding="5dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:backgroundTint="?attr/foregroundColor"/>
-
-        <ImageButton android:id="@+id/box9"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:padding="5dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:backgroundTint="?attr/foregroundColor"/>
-
-    </GridLayout>
-
-    <TextView
-        android:id="@+id/infos"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/grid"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
-        android:textSize="26sp"
-        android:textAlignment="center"
-        android:textColor="?attr/textColor"
-        android:text="" />
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/back"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/grid"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/white"
-        android:background="@color/lightActive"
-        android:text="@string/back" />
+        <TextView
+            android:id="@+id/infos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:textSize="26sp"
+            android:textAlignment="center"
+            android:textColor="?attr/textColor"
+            android:text="" />
+
+        <GridLayout android:id="@+id/grid"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:columnCount="3"
+            android:rowCount="3">
+
+            <ImageButton android:id="@+id/box1"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:padding="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:backgroundTint="?attr/foregroundColor"/>
+
+            <ImageButton android:id="@+id/box2"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:padding="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:backgroundTint="?attr/foregroundColor"/>
+
+            <ImageButton android:id="@+id/box3"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:padding="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:backgroundTint="?attr/foregroundColor"/>
+
+            <ImageButton android:id="@+id/box4"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:padding="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:backgroundTint="?attr/foregroundColor"/>
+
+            <ImageButton android:id="@+id/box5"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:padding="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:backgroundTint="?attr/foregroundColor"/>
+
+            <ImageButton android:id="@+id/box6"
+                android:layout_row="1"
+                android:layout_column="2"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:padding="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:backgroundTint="?attr/foregroundColor"/>
+
+            <ImageButton android:id="@+id/box7"
+                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:padding="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:backgroundTint="?attr/foregroundColor"/>
+
+            <ImageButton android:id="@+id/box8"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:padding="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:backgroundTint="?attr/foregroundColor"/>
+
+            <ImageButton android:id="@+id/box9"
+                android:layout_row="2"
+                android:layout_column="2"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:padding="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:backgroundTint="?attr/foregroundColor"/>
+
+        </GridLayout>
+
+        <Button
+            android:id="@+id/again"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"
+            android:background="@color/darkActive"
+            android:text="@string/again" />
+
+        <Button
+            android:id="@+id/back"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"
+            android:background="@color/lightActive"
+            android:text="@string/back" />
+
+    </LinearLayout>
 
 </RelativeLayout>
